# libxpcsc

./: .clang-format  CMakeLists.txt  README.md
include/: xpcsc.hpp
src/: aids.cpp  aids.hpp  card.cpp  card.hpp  card_apps.cpp  card_apps.hpp  config.cpp  config.hpp  connection.cpp  constants.hpp  format.cpp  get_mifare_uid.cpp  main.cpp  mifaire.cpp  parser.cpp  parser.hpp
util/: print_bytes.c
